# ckb-script-ipc-demo

./: Cargo.toml  Makefile  README.md
.github/workflows/: Rust.yml
contracts/ckb-script-ipc-demo/: Cargo.toml  README.md
contracts/ckb-script-ipc-demo/src/: entry.rs  error.rs  main.rs
crates/ckb-script-ipc-common/: Cargo.toml
crates/ckb-script-ipc-common/src/: channel.rs  error.rs  io.rs  io_impl.rs  ipc.rs  lib.rs  packet.rs  pipe.rs  vlq.rs
