[workspace]
resolver = "2"

members = [ "crates/ckb-script-ipc-common",
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ckb-script-ipc-demo",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
panic = "abort"
