[package]
name = "ckb-script-ipc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: update it to ckb-std 0.16.0 when it's published
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std.git", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic"], rev = "548a42b" }

serde = { version = "1.0.208", default-features = false }
serde_molecule = { version = "1.0.1" }
